# Project_Devlopment-Suite

./: .gitignore  README.md  build-context.md  build-log.md  build-plan.md  pyproject.toml  pyrightconfig.json
.claude/skills/: README.md
.claude/skills/_deep-dive/: skill.md
.claude/skills/_party-mode/: agent-manifest.csv  skill.md
.claude/skills/_prd-data/: prd-purpose.md  prd-template.md  project-types.csv  validation-checks.md
.claude/skills/analyze-integrations/: integration-spec.template.md  skill.md
.claude/skills/build-from-prd/: build-state-template.json  skill.md
docs/: PRD.md  architecture.md
specs/: batch.md  cli.md  column_map.md  config.md  errors.md  extract_invoice.md  extract_packing.md  extract_totals.md  logger.md  merge_tracker.md  models.md  output.md  report.md  sheet_detect.md  transform.md  utils.md  validate.md  weight_alloc.md  xls_adapter.md
src/autoconvert/: __main__.py  batch.py  cli.py  column_map.py  config.py  errors.py  extract_invoice.py  extract_packing.py  extract_totals.py  logger.py  merge_tracker.py  models.py  output.py  report.py  sheet_detect.py  transform.py  utils.py  validate.py  weight_alloc.py  xls_adapter.py
tests/: conftest.py  test_batch.py  test_column_map.py  test_config.py  test_diagnostic.py  test_errors.py  test_extract_invoice.py  test_extract_packing.py  test_extract_totals.py  test_integration.py  test_merge_tracker.py  test_models.py  test_output.py  test_report.py  test_sheet_detect.py  test_transform.py  test_utils.py  test_validate.py  test_weight_alloc.py  test_xls_adapter.py
(+109 files in other folders)
