[project]
name = "autoconvert"
version = "0.1.0"
description = "Batch Excel-to-template converter for customs invoice processing"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "PyYAML>=6.0.3",
    "pydantic>=2.12",
]

[project.scripts]
autoconvert = "autoconvert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoconvert"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
